[package]
name = "montinger-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
mongodb = "2.8.2"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }
